--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <script src="src/Internal/ExpantaNum.js"></script>
     <script type="module" src="src/Game.js"></script>
     <link rel="stylesheet" type="text/css" href="css/miscStyles.css" />
     <link rel="stylesheet" type="text/css" href="css/classStyles.css" />
     <link rel="stylesheet" type="text/css" href="css/idStyles.css" />
     <link rel="icon" href="favicon.png" type="image/x-icon" sizes="16x16">
-    <title>ExpantaReach</title>
+    <title>The Grind</title>
 </head>
 <body>
     <strong class="flexBox generalText" id="number">0</strong>
