post-infinity content

--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
     <button class="flexBox saveRelated" id="import" onclick="importSave()">[Temp] Import yout Savedata</button>
     <button class="flexBox saveRelated" id="help" onclick="help()">Set your Number to 100 [ >:( cheater ]</button>
 </div>
+<div id="gwasmithContainer">
+    <img src="gwasmith.png" id="gwasmith">
+</div>
 </body>
 </html>
