--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <title>The Grind</title>
 </head>
 <body>
+    <h1 style="color: white;">
+    Current time: <span id="timer1">0</span>:<span id="timer2">00</span>
+  </h1>
 <div class="flexBox" id="mainPageContainer" style="display: flex">
     <strong class="flexBox generalText" id="tiCheck" style="color: goldenrod">You have entered the True Infinity. (Reset 5 is effected by Reset 4's effect)</strong>
     <strong class="flexBox generalText" id="number">0</strong>
