--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <strong style="color: white;">
-    Current time: <span id="timer1">0</span>:<span id="timer2">00</span>
+    Current time: <span id="timer1"></span>:<span id="timer2"></span>.<span id="timer3"></span>
   </strong>
 <div class="flexBox" id="mainPageContainer" style="display: flex">
     <strong class="flexBox generalText" id="tiCheck" style="color: goldenrod">You have entered the True Infinity. (Reset 5 is effected by Reset 4's effect)</strong>
